# RoboCAT

./: README.md  data_generate_example.py  example.py  pyproject.toml  requirements.txt  setup.py  video_example.py
DOCS/: RESEARCH.md
roboCAT/: __init__.py  model.py  model2.py  train.py
roboCAT/models/: gato.py  model.py
roboCAT/models/gato/: gato.py
roboCAT/models/gato/GATO/: README.md  example.py
roboCAT/models/gato/GATO/gato/models/: tokenizers.py  transformer.py
roboCAT/models/vqgan/: README.md  VQGAN.py
robocat/: README.md  __init__.py  gato.py  model.py  train.py  vqgan.py
robocat/models/MechaZilla/: README.md  requirements.txt
robocat/models/MechaZilla/models/: __init__.py
robocat/models/MechaZilla/models/GATO/: README.md  training.py
robocat/models/MechaZilla/models/rt1/: flash_attn.py  model.py  robotic_transformer.py  train.py
robocat/models/gato/GATO/: setup.py
robocat/models/gato/GATO/datasets/: README.md
robocat/models/gato/GATO/gato/: __init__.py  config.py
robocat/models/gato/GATO/gato/models/: __init__.py  embedding.py  transformer.py
robocat/models/vqgan/: VQGAN.py  augment_trajectories.py
robocat/models/vqgan/taming_transformers/: main.py
robocat/models/vqgan/taming_transformers/scripts/: extract_segmentation.py  make_samples.py  make_scene_samples.py  sample_conditional.py  sample_fast.py
robocat/models/vqgan/taming_transformers/taming/data/: coco.py  custom.py  imagenet.py
robocat/models/vqgan/taming_transformers/taming/models/: cond_transformer.py
robocat/old/: model2.py
robocat/utils/: training.py
(+7 files in other folders)
